change local connection string

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -25,8 +25,8 @@
   </mvcConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleModelContext;Integrated Security=true;" />
-    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleMessageStore;Integrated Security=true;" />
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
