--- a/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.Mvc/IFramework.Infrastructure.Mvc.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ControllerFactories\IoCControllerFactory.cs" />
     <Compile Include="MultipartMediaTypeFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
