--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -25,8 +25,8 @@
   </mvcConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleModelContext;Integrated Security=true;" />
-    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleMessageStore;Integrated Security=true;" />
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
@@ -38,7 +38,7 @@
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
-    <alias alias="CommandBus" type="IFramework.Command.Impl.CommandBus, IFramework" />
+    <alias alias="CommandBus" type="IFramework.MessageQueue.ZeroMQ.CommandBus, IFramework.MessageQueue.ZeroMQ" />
     <!--<alias alias="IMessageDistributor" type="IFramework.Message.IMessageDistributor, IFramework"/>
     <alias alias="CommandDistributor" type="IFramework.MessageQueue.ZeroMQ.CommandDistributor, IFramework.MessageQueue.ZeroMQ"/>-->
     <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework" />
@@ -65,8 +65,14 @@
         <lifetime type="singleton" />
         <constructor>
           <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
-          <param name="commandConsumer" dependencyName="CommandConsumer" />
+          <param name="linerCommandManager" dependencyType="LinearCommandManager" />
+          <param name="receiveEndPoint" value="inproc://commandBus" />
           <param name="inProc" value="true" />
+          <param name="targetEndPoints">
+            <array>
+              <value value="inproc://distributer" />
+            </array>
+          </param>
         </constructor>
       </register>
       <register type="IUnitOfWork" mapTo="UnitOfWork">
