--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -32,4 +32,5 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
+  <package id="clrzmq" version="3.0.0-rc1" targetFramework="net40" />
 </packages>
