--- a/Src/iFramework.Plugins/iFramework.MessageQueue.ZeroMQ/IFramework.MessageQueue.ZeroMQ.csproj
+++ b/Src/iFramework.Plugins/iFramework.MessageQueue.ZeroMQ/IFramework.MessageQueue.ZeroMQ.csproj
@@ -48,14 +48,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandBus.cs" />
     <Compile Include="CommandConsumer.cs" />
     <Compile Include="CommandDistributer.cs" />
     <Compile Include="EventPublisher.cs" />
     <Compile Include="MessageConsumer.cs" />
     <Compile Include="DomainEventSubscriber.cs" />
+    <Compile Include="MessageFrame.cs" />
     <Compile Include="MessageQueueImpl.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MessageState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
