add DistributableCommandBus which is a combination of commandbus and distributer, it can reduce the payload of message transition

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -39,6 +39,7 @@
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
     <alias alias="CommandBus" type="IFramework.MessageQueue.ZeroMQ.CommandBus, IFramework.MessageQueue.ZeroMQ" />
+    <alias alias="DistributableCommandBus" type="IFramework.MessageQueue.ZeroMQ.DistributableCommandBus, IFramework.MessageQueue.ZeroMQ" />
     <!--<alias alias="IMessageDistributor" type="IFramework.Message.IMessageDistributor, IFramework"/>
     <alias alias="CommandDistributor" type="IFramework.MessageQueue.ZeroMQ.CommandDistributor, IFramework.MessageQueue.ZeroMQ"/>-->
     <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework" />
@@ -65,7 +66,7 @@
         <lifetime type="singleton" />
         <constructor>
           <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
-          <param name="linerCommandManager" dependencyType="LinearCommandManager" />
+          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
           <param name="receiveEndPoint" value="inproc://commandBus" />
           <param name="inProc" value="true" />
           <param name="targetEndPoints">
@@ -74,7 +75,17 @@
             </array>
           </param>
         </constructor>
-      </register>
+      </register> 
+      <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
+        <lifetime type="singleton" />
+        <constructor>
+          <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
+          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
+          <param name="commandConsumer" dependencyName="CommandDistributer"></param>
+          <param name="receiveEndPoint" value="inproc://commandBus" />
+          <param name="inProc" value="true" />
+        </constructor>
+      </register>-->
       <register type="IUnitOfWork" mapTo="UnitOfWork">
         <lifetime type="permessagecontext" />
       </register>
