reconstruct message context

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -50,7 +50,7 @@
     <alias alias="IUnitOfWork" type="IFramework.UnitOfWork.IUnitOfWork, IFramework" />
     <alias alias="UnitOfWork" type="IFramework.EntityFramework.UnitOfWork, IFramework.EntityFramework" />
     <alias alias="IDomainEventBus" type="IFramework.Event.IDomainEventBus, IFramework" />
-    <alias alias="DomainEventBus" type="IFramework.Event.Impl.DomainEventBus, IFramework" />
+    <alias alias="DomainEventBus" type="IFramework.MessageQueue.ZeroMQ.DomainEventBus, IFramework.MessageQueue.ZeroMQ" />
     <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework" />
     <alias alias="MessageStore" type="IFramework.EntityFramework.MessageStore, IFramework.EntityFramework" />
     <alias alias="DbContextImpl" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
