--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -25,8 +25,8 @@
   </mvcConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;Integrated Security=true;" />
-    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleMessageStore;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
@@ -71,7 +71,7 @@
           <param name="inProc" value="true" />
           <param name="targetEndPoints">
             <array>
-              <value value="inproc://distributer" />
+              <value value="inproc://distributor" />
             </array>
           </param>
         </constructor>
@@ -81,7 +81,7 @@
         <constructor>
           <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
           <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="commandConsumer" dependencyName="CommandDistributer"></param>
+          <param name="commandConsumer" dependencyName="CommandDistributor"></param>
           <param name="receiveEndPoint" value="inproc://commandBus" />
           <param name="inProc" value="true" />
         </constructor>
@@ -166,32 +166,6 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <profile defaultProvider="DefaultProfileProvider">
-      <providers>
-        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
-      </providers>
-    </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
-      <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="DefaultRoleProvider">
-      <providers>
-        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
-      </providers>
-    </roleManager>
-    <!--
-            If you are deploying to a cloud environment that has multiple web server instances,
-            you should change session state mode from "InProc" to "Custom". In addition,
-            change the connection string named "DefaultConnection" to connect to an instance
-            of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
-      -->
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
-      <providers>
-        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
-      </providers>
-    </sessionState>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
