--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-# http://www.gnu.org/software/automake
+build
+packages
 
-Makefile.in
-
-# http://www.gnu.org/software/autoconf
-
-/autom4te.cache
-/aclocal.m4
-/compile
-/configure
-/depcomp
-/install-sh
-/missing
+# dotnet
+%APPDATA%
+bin
+obj
+*.suo
+*.user
+*.sln.cache
+*.nupkg
+*.vsmdi
