set log4net IsDebugEnabled DEBUG

--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -27,7 +27,7 @@
   </appender>
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
-    <!--<priority value="DEBUG"/>-->
+    <priority value="DEBUG"/>
     <appender-ref ref="rollingFile" />
     <appender-ref ref="traceAppender" />
   </root>
