--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -21,7 +21,7 @@
   </appender>
   <appender name="traceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %5level %logger - %message%newline" />
+      <conversionPattern value="%date %5level - %message%newline" />
     </layout>
     <threshold value="DEBUG" />
   </appender>
