--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -7,7 +7,7 @@
     <appendToFile value="true"/>
     <!--按照文件的大小进行变换日志文件-->
     <rollingStyle value="Composite"/>
-    <dataPattern value="yyyy-MM-dd" />
+    <datePattern value="yyyy-MM-dd" />
     <!--最大变换数量-->
     <maxSizeRollBackups value="10"/>
     <!--最大文件大小-->
@@ -15,7 +15,7 @@
     <!--日志文件名是否为静态-->
     <staticLogFileName value="false"/>
     <layout type="log4net.Layout.PatternLayout,log4net">
-      <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+      <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline"/>
     </layout>
     <threshold value="ERROR" />
   </appender>
