--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Event\IEventSubscriber.cs" />
     <Compile Include="Event\IEventSubscriberProvider.cs" />
     <Compile Include="Event\Impl\EventSubscriberProvider.cs" />
+    <Compile Include="Message\MessageState.cs" />
     <Compile Include="SysException\NoCommandHandlerExists.cs" />
     <Compile Include="Infrastructure\CookieHelper.cs" />
     <Compile Include="Infrastructure\DisposeObjectHttpModule.cs" />
