--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -62,7 +62,7 @@
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton" />
       </register>
-      <register type="ICommandBus" mapTo="CommandBus">
+      <!--<register type="ICommandBus" mapTo="CommandBus">
         <lifetime type="singleton" />
         <constructor>
           <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
@@ -75,7 +75,7 @@
             </array>
           </param>
         </constructor>
-      </register> 
+      </register>--> 
       <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
         <lifetime type="singleton" />
         <constructor>
