--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.3.0" targetFramework="net40" />
+  <package id="clrzmq" version="3.0.0-rc1" targetFramework="net40" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net40" />
   <package id="jQuery" version="1.8.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
@@ -32,5 +34,4 @@
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
-  <package id="clrzmq" version="3.0.0-rc1" targetFramework="net40" />
 </packages>
