complete the integration of equeue, but equeue still has some bugs.

--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -25,23 +25,19 @@
   </mvcConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleModelContext;Integrated Security=true;" />
-    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleMessageStore;Integrated Security=true;" />
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
     <alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
-    <alias alias="DomainEventSubscriber" type="IFramework.MessageQueue.ZeroMQ.DomainEventSubscriber, IFramework.MessageQueue.ZeroMQ" />
+    <alias alias="DomainEventSubscriber" type="IFramework.MessageQueue.EQueue.DomainEventSubscriber, IFramework.MessageQueue.EQueue" />
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework" />
-    <alias alias="EventPublisher" type="IFramework.MessageQueue.ZeroMQ.EventPublisher, IFramework.MessageQueue.ZeroMQ" />
+    <alias alias="EventPublisher" type="IFramework.MessageQueue.EQueue.EventPublisher, IFramework.MessageQueue.EQueue" />
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
-    <alias alias="CommandBus" type="IFramework.MessageQueue.ZeroMQ.CommandBus, IFramework.MessageQueue.ZeroMQ" />
-    <alias alias="DistributableCommandBus" type="IFramework.MessageQueue.ZeroMQ.DistributableCommandBus, IFramework.MessageQueue.ZeroMQ" />
-    <!--<alias alias="IMessageDistributor" type="IFramework.Message.IMessageDistributor, IFramework"/>
-    <alias alias="CommandDistributor" type="IFramework.MessageQueue.ZeroMQ.CommandDistributor, IFramework.MessageQueue.ZeroMQ"/>-->
     <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework" />
     <alias alias="CommandHandlerProvider" type="IFramework.Command.Impl.CommandHandlerProvider, IFramework" />
     <alias alias="IHandlerProvider" type="IFramework.Message.IHandlerProvider, IFramework" />
@@ -50,7 +46,7 @@
     <alias alias="IUnitOfWork" type="IFramework.UnitOfWork.IUnitOfWork, IFramework" />
     <alias alias="UnitOfWork" type="IFramework.EntityFramework.UnitOfWork, IFramework.EntityFramework" />
     <alias alias="IDomainEventBus" type="IFramework.Event.IDomainEventBus, IFramework" />
-    <alias alias="DomainEventBus" type="IFramework.MessageQueue.ZeroMQ.DomainEventBus, IFramework.MessageQueue.ZeroMQ" />
+    <alias alias="DomainEventBus" type="IFramework.Event.Impl.DomainEventBus, IFramework" />
     <alias alias="IMessageStore" type="IFramework.Message.IMessageStore, IFramework" />
     <alias alias="MessageStore" type="IFramework.EntityFramework.MessageStore, IFramework.EntityFramework" />
     <alias alias="DbContextImpl" type="Sample.Persistence.SampleModelContext, Sample.Persistence" />
@@ -62,30 +58,6 @@
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton" />
       </register>
-      <!--<register type="ICommandBus" mapTo="CommandBus">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
-          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="receiveEndPoint" value="inproc://commandBus" />
-          <param name="inProc" value="true" />
-          <param name="targetEndPoints">
-            <array>
-              <value value="inproc://distributor" />
-            </array>
-          </param>
-        </constructor>
-      </register>--> 
-      <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
-        <lifetime type="singleton" />
-        <constructor>
-          <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
-          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
-          <param name="commandConsumer" dependencyName="CommandDistributor"></param>
-          <param name="receiveEndPoint" value="inproc://commandBus" />
-          <param name="inProc" value="true" />
-        </constructor>
-      </register>-->
       <register type="IUnitOfWork" mapTo="UnitOfWork">
         <lifetime type="permessagecontext" />
       </register>
@@ -110,23 +82,6 @@
               <value value="AsyncDomainEventSubscriber" />
             </array>
           </param>
-        </constructor>
-      </register>
-      <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="DomainEventSubscriber">
-        <lifetime type="singleton" />
-        <constructor>
-          <param dependencyName="AsyncDomainEventSubscriber" name="handlerProvider" />
-          <param name="subEndPoints">
-            <array>
-              <value value="inproc://eventbus" />
-            </array>
-          </param>
-        </constructor>
-      </register>
-      <register type="IEventPublisher" mapTo="EventPublisher">
-        <lifetime type="singleton"></lifetime>
-        <constructor>
-          <param name="pubEndPoint" value="inproc://eventbus"></param>
         </constructor>
       </register>
       <register type="IDomainEventBus" mapTo="DomainEventBus">
