--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -17,7 +17,7 @@
     <layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline"/>
     </layout>
-    <threshold value="ERROR" />
+    <threshold value="DEBUG" />
   </appender>
   <appender name="traceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
