--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -32,12 +32,16 @@
     <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
     <alias alias="permessagecontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerMessageContextLifetimeManager, IFramework" />
     <alias alias="IMessageConsumer" type="IFramework.Message.IMessageConsumer, IFramework" />
-    <alias alias="DomainEventSubscriber" type="IFramework.MessageQueue.EQueue.DomainEventSubscriber, IFramework.MessageQueue.EQueue" />
+    <alias alias="DomainEventSubscriber" type="IFramework.MessageQueue.ZeroMQ.DomainEventSubscriber, IFramework.MessageQueue.ZeroMQ" />
     <alias alias="IEventPublisher" type="IFramework.Event.IEventPublisher, IFramework" />
-    <alias alias="EventPublisher" type="IFramework.MessageQueue.EQueue.EventPublisher, IFramework.MessageQueue.EQueue" />
+    <alias alias="EventPublisher" type="IFramework.MessageQueue.ZeroMQ.EventPublisher, IFramework.MessageQueue.ZeroMQ" />
     <alias alias="ILinearCommandManager" type="IFramework.Command.ILinearCommandManager, IFramework" />
     <alias alias="LinearCommandManager" type="Sample.Command.LinearCommandManager, Sample.Command" />
     <alias alias="ICommandBus" type="IFramework.Command.ICommandBus, IFramework" />
+    <alias alias="CommandBus" type="IFramework.MessageQueue.ZeroMQ.CommandBus, IFramework.MessageQueue.ZeroMQ" />
+    <alias alias="DistributableCommandBus" type="IFramework.MessageQueue.ZeroMQ.DistributableCommandBus, IFramework.MessageQueue.ZeroMQ" />
+    <!--<alias alias="IMessageDistributor" type="IFramework.Message.IMessageDistributor, IFramework"/>
+    <alias alias="CommandDistributor" type="IFramework.MessageQueue.ZeroMQ.CommandDistributor, IFramework.MessageQueue.ZeroMQ"/>-->
     <alias alias="ICommandHandlerProvider" type="IFramework.Command.ICommandHandlerProvider, IFramework" />
     <alias alias="CommandHandlerProvider" type="IFramework.Command.Impl.CommandHandlerProvider, IFramework" />
     <alias alias="IHandlerProvider" type="IFramework.Message.IHandlerProvider, IFramework" />
@@ -58,6 +62,30 @@
       <register type="ILinearCommandManager" mapTo="LinearCommandManager">
         <lifetime type="singleton" />
       </register>
+      <register type="ICommandBus" mapTo="CommandBus">
+        <lifetime type="singleton" />
+        <constructor>
+          <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
+          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
+          <param name="receiveEndPoint" value="inproc://commandBus" />
+          <param name="inProc" value="true" />
+          <param name="targetEndPoints">
+            <array>
+              <value value="inproc://distributor" />
+            </array>
+          </param>
+        </constructor>
+      </register>
+      <!--<register type="ICommandBus" mapTo="DistributableCommandBus">
+        <lifetime type="singleton" />
+        <constructor>
+          <param name="handlerProvider" dependencyType="CommandHandlerProvider" />
+          <param name="linearCommandManager" dependencyType="LinearCommandManager" />
+          <param name="commandConsumer" dependencyName="CommandDistributor"></param>
+          <param name="receiveEndPoint" value="inproc://commandBus" />
+          <param name="inProc" value="true" />
+        </constructor>
+      </register>-->
       <register type="IUnitOfWork" mapTo="UnitOfWork">
         <lifetime type="permessagecontext" />
       </register>
@@ -82,6 +110,23 @@
               <value value="AsyncDomainEventSubscriber" />
             </array>
           </param>
+        </constructor>
+      </register>
+      <register name="DomainEventConsumer" type="IMessageConsumer" mapTo="DomainEventSubscriber">
+        <lifetime type="singleton" />
+        <constructor>
+          <param dependencyName="AsyncDomainEventSubscriber" name="handlerProvider" />
+          <param name="subEndPoints">
+            <array>
+              <value value="inproc://eventbus" />
+            </array>
+          </param>
+        </constructor>
+      </register>
+      <register type="IEventPublisher" mapTo="EventPublisher">
+        <lifetime type="singleton"></lifetime>
+        <constructor>
+          <param name="pubEndPoint" value="inproc://eventbus"></param>
         </constructor>
       </register>
       <register type="IDomainEventBus" mapTo="DomainEventBus">
