--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -25,8 +25,8 @@
   </mvcConfiguration>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;Integrated Security=true;" />
-    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleMessageStore;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
     <alias alias="perexecutioncontext" type="IFramework.Infrastructure.Unity.LifetimeManagers.PerExecutionContextLifetimeManager, IFramework" />
@@ -71,7 +71,7 @@
           <param name="inProc" value="true" />
           <param name="targetEndPoints">
             <array>
-              <value value="inproc://distributor" />
+              <value value="tcp://127.0.0.1:5000" />
             </array>
           </param>
         </constructor>
@@ -118,7 +118,7 @@
           <param dependencyName="AsyncDomainEventSubscriber" name="handlerProvider" />
           <param name="subEndPoints">
             <array>
-              <value value="inproc://eventbus" />
+              <value value="tcp://127.0.0.1:5006" />
             </array>
           </param>
         </constructor>
@@ -126,7 +126,7 @@
       <register type="IEventPublisher" mapTo="EventPublisher">
         <lifetime type="singleton"></lifetime>
         <constructor>
-          <param name="pubEndPoint" value="inproc://eventbus"></param>
+          <param name="pubEndPoint" value="tcp://127.0.0.1:5006"></param>
         </constructor>
       </register>
       <register type="IDomainEventBus" mapTo="DomainEventBus">
